update to allow different products, albums contain songs, allow songs, update images

--- a/public/signup.html
+++ b/public/signup.html
@@ -14,7 +14,7 @@
 
 <body>
   <div class="top-banner">
-  <button class="menu-toggle" aria-label="Toggle menu"><img src="images/menu.svg"></button>
+  <button type="button" class="menu-toggle" aria-label="Toggle menu"><img src="images/menu.svg" alt="Menu icon"></button>
     <nav class="header-menu" aria-label="Main menu">
       <a href="/login.html">Login</a>
       <a href="/signup.html" aria-current="page">Sign up</a>
