--- a/public/cart.html
+++ b/public/cart.html
@@ -15,16 +15,16 @@
 <body> 
   <div class="top-banner">
     <p id="greeting" class="top-banner-greeting"></p>
-    <button class="menu-toggle" aria-label="Toggle menu"><img src="images/menu.svg" alt=""></button>
+     <button type="button" class="menu-toggle" aria-label="Toggle menu"><img src="images/menu.svg" alt="Menu icon"></button>
     <nav class="header-menu" aria-label="Main menu">
       <a href="/login.html" id="login">Log in</a>
       <a href="/signup.html" id="signup">Sign up</a>
-      <button class="main-btn" id="logout-btn">Log out</button>
+      <button type="button" class="main-btn" id="logout-btn">Log out</button>
     </nav>
   </div>
 
   <header>
-    <a href="/"><img src="/images/spiral_logo.png" alt="Soul Provider Logo"></a>
+    <a href="/" aria-label="Soul Provider home page"><img src="/images/spiral_logo.png" alt="Soul Provider Logo"></a>
     <div class="header-text">
       <h1>Soul Provider</h1>
       <p class="subhead">The Best Music</p>
@@ -39,7 +39,7 @@
       <h3>Have a Coupon?</h3>
       <div class="coupon-input-group">
         <input type="text" id="coupon-input" placeholder="Enter coupon code" />
-        <button class="secondary-btn" id="apply-coupon-btn">Apply</button>
+        <button type="button" class="secondary-btn" id="apply-coupon-btn">Apply</button>
       </div>
       <p id="coupon-message" class="coupon-message"></p>
     </div>
@@ -65,7 +65,7 @@
     </div>
 
     <p id="user-message"></p>
-    <button class="main-btn" id="checkout-btn">Place Order</button>
+    <button type="button" class="main-btn" id="checkout-btn">Place Order</button>
 
   </main>
   <footer>
