--- a/public/index.html
+++ b/public/index.html
@@ -15,12 +15,12 @@
 <body>
   <div class="top-banner" id="top-banner">
     <p id="greeting" class="top-banner-greeting"></p>
-    <a href="/cart.html" id="cart-banner" class="cart-banner-link"></a>
-    <button class="menu-toggle" aria-label="Toggle menu"><img src="images/menu.svg" alt=""></button>
+    <a href="/cart.html" id="cart-banner" class="cart-banner-link" aria-label="View shopping cart"></a>
+    <button type="button" class="menu-toggle" aria-label="Toggle menu"><img src="images/menu.svg" alt="Menu icon"></button>
     <nav class="header-menu" aria-label="Main menu">
       <a href="/login.html" id="login">Log in</a>
       <a href="/signup.html" id="signup">Sign up</a>
-      <button class="main-btn" id="logout-btn">Log out</button>
+      <button type="button" class="main-btn" id="logout-btn">Log out</button>
       <form role="search">
         <label for="search-input" class="visually-hidden">Search products</label>
         <input type="text" placeholder="Search..." id="search-input" autocomplete="off">
@@ -29,7 +29,7 @@
   </div>
 
   <header>
-    <a href="/"><img src="/images/spiral_logo.png" alt="Soul Provider Logo"></a>
+    <a href="/" aria-label="Soul Provider home page"><img src="/images/spiral_logo.png" alt="Soul Provider Logo"></a>
     <div class="header-text">
       <h1>Soul Provider</h1>
       <p class="subhead">The Best Music</p>
@@ -40,6 +40,7 @@
     <select id="genre-select">
       <option value="">Show All</option>
     </select>
+    <a href="/add-product.html" id="add-product-link" class="add-product-btn" style="display: none;">+ Add Product</a>
   </section>
   <main class="products" id="products-container"></main>
   <footer>
