--- a/public/cart.html
+++ b/public/cart.html
@@ -65,7 +65,10 @@
     </div>
 
     <p id="user-message"></p>
-    <button type="button" class="main-btn" id="checkout-btn">Place Order</button>
+    <div class="cart-actions">
+      <button type="button" class="main-btn" id="clear-cart-btn">Clear Cart</button>
+      <button type="button" class="main-btn" id="checkout-btn">Place Order</button>
+    </div>
 
   </main>
   <footer>
