--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,7 @@
       <option value="">Show All</option>
     </select>
     <a href="/add-product.html" id="add-product-link" class="add-product-btn" style="display: none;">+ Add Product</a>
+    <a href="/manage-products.html" id="manage-products-link" class="add-product-btn" style="display: none;">Manage Products</a>
   </section>
   <main class="products" id="products-container"></main>
   <footer>
