--- a/public/add-product.html
+++ b/public/add-product.html
@@ -5,18 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Add Product - Soul Provider</title>
     <link rel="stylesheet" href="/css/index.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Plaster&family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   </head>
   <body>
-    <nav>
-      <h1>Soul Provider</h1>
-      <div class="nav-links">
-        <a href="/" class="back-link">← Back to Store</a>
+    <div class="top-banner">
+      <p id="greeting" class="top-banner-greeting"></p>
+      <button type="button" class="menu-toggle" aria-label="Toggle menu"><img src="images/menu.svg" alt="Menu icon"></button>
+      <nav class="header-menu" aria-label="Main menu">
+        <a href="/">Back to Store</a>
+        <button type="button" class="main-btn" id="logout-btn">Log out</button>
+      </nav>
+    </div>
+
+    <header>
+      <a href="/" aria-label="Soul Provider home page"><img src="/images/spiral_logo.png" alt="Soul Provider Logo"></a>
+      <div class="header-text">
+        <h1>Soul Provider</h1>
+        <p class="subhead">Add New Product</p>
       </div>
-    </nav>
+    </header>
 
     <div class="add-product-container">
-      <h2>Add New Product</h2>
-      
       <div id="message"></div>
 
       <form class="add-product-form" id="add-product-form">
@@ -139,6 +150,10 @@
       </form>
     </div>
 
+    <footer>
+      <p>© Soul Provider</p>
+    </footer>
+    <script type="module" src="/js/menu.js"></script>
     <script type="module" src="/js/add-product.js"></script>
   </body>
 </html>
