--- a/public/cart.html
+++ b/public/cart.html
@@ -17,6 +17,7 @@
     <p id="greeting" class="top-banner-greeting"></p>
      <button type="button" class="menu-toggle" aria-label="Toggle menu"><img src="images/menu.svg" alt="Menu icon"></button>
     <nav class="header-menu" aria-label="Main menu">
+      <a href="/">Back to Store</a>
       <a href="/login.html" id="login">Log in</a>
       <a href="/signup.html" id="signup">Sign up</a>
       <button type="button" class="main-btn" id="logout-btn">Log out</button>
@@ -27,12 +28,11 @@
     <a href="/" aria-label="Soul Provider home page"><img src="/images/spiral_logo.png" alt="Soul Provider Logo"></a>
     <div class="header-text">
       <h1>Soul Provider</h1>
-      <p class="subhead">The Best Music</p>
+      <p class="subhead">Your Basket</p>
     </div>
   </header>
 
   <main class="cart-main">
-    <h2>Your Basket</h2>
     <ul id="cart-list"></ul>
     
     <div class="coupon-section">
