feat: Complete admin system with user management dashboard
- Add admin dashboard UI with user listing, search, and edit functionality
- Implement admin API endpoints for user and role management (CRUD operations)
- Create admin controller with comprehensive user management functions
- Add role-based access control with permission checking middleware
- Implement user detail modal with form for editing user information
- Add role assignment/revocation functionality
- Update navbar to show "Admin" link for admin users only
- Implement delegated event handling for dynamic table content
- Style admin dashboard to match manage-songs dark theme
- Ensure WCAG accessibility with proper contrast ratios
- Add CSP-compliant JavaScript (no inline scripts)
- Create admin routes protected by requirePermission middleware
- Add email history tracking when users update email addresses
- Implement data transformation for API responses (snake_case to camelCase)
- Add defensive coding patterns for missing DOM elements
- Include comprehensive user search and filtering
- Document admin system usage and architecture

Modified files:
- controllers/authController.js, meController.js, etc. (database connection fixes)
- server.js (mount admin routes)
- public/js/authUI.js (update role-based button visibility)
- public/js/menu.js (add renderNavbar with defensive checks)
- public/js/index.js (integrate admin navbar)
- public/admin-dashboard.html (new admin UI)
- public/js/admin.js (new admin dashboard script)
- routes/admin.js (new admin API endpoints)
- controllers/adminController.js (new admin business logic)

Created documentation:
- ADMIN-SYSTEM.md (implementation summary)
- ADMIN-USAGE-GUIDE.md (end-user guide)

--- a/public/manage-products.html
+++ b/public/manage-products.html
@@ -15,6 +15,7 @@
     <button type="button" class="menu-toggle" aria-label="Toggle menu"><img src="images/menu.svg" alt="Menu icon"></button>
     <nav class="header-menu" aria-label="Main menu">
       <a href="/">Back to Store</a>
+      <a href="/songs.html">Shop Songs</a>
       <a href="/add-product.html">Add Product</a>
       <button type="button" class="main-btn" id="logout-btn">Log out</button>
     </nav>
@@ -30,6 +31,10 @@
 
   <main class="manage-products-container">
     <h2>Manage Products</h2>
+    
+    <div class="add-product-cta">
+      <a href="/add-product.html" class="btn-primary">+ Add Product</a>
+    </div>
     
     <div class="filter-section">
       <input type="text" id="search-input" placeholder="Search products..." />
