--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
     <a href="/cart.html" id="cart-banner" class="cart-banner-link" aria-label="View shopping cart"></a>
     <button type="button" class="menu-toggle" aria-label="Toggle menu"><img src="images/menu.svg" alt="Menu icon"></button>
     <nav class="header-menu" aria-label="Main menu">
+      <a href="/songs.html">Shop Songs</a>
       <a href="/login.html" id="login">Log in</a>
       <a href="/signup.html" id="signup">Sign up</a>
       <button type="button" class="main-btn" id="logout-btn">Log out</button>
@@ -32,7 +33,7 @@
     <a href="/" aria-label="Soul Provider home page"><img src="/images/spiral_logo.png" alt="Soul Provider Logo"></a>
     <div class="header-text">
       <h1>Soul Provider</h1>
-      <p class="subhead">The Best Music</p>
+      <p class="subhead">Your Best Music</p>
     </div>
   </header>
   <section class="genre-select-container">
@@ -40,10 +41,24 @@
     <select id="genre-select">
       <option value="">Show All</option>
     </select>
+  </section>
+  <section class="button-container">
     <a href="/add-product.html" id="add-product-link" class="add-product-btn" style="display: none;">+ Add Product</a>
     <a href="/manage-products.html" id="manage-products-link" class="add-product-btn" style="display: none;">Manage Products</a>
+    <a href="/manage-songs.html" id="manage-songs-link" class="add-product-btn" style="display: none;">Manage Songs</a>
   </section>
   <main class="products" id="products-container"></main>
+
+  <!-- Album Details Modal -->
+  <div class="album-modal-overlay" id="albumModalOverlay">
+    <div class="album-modal-content">
+      <button class="album-modal-close" id="albumModalClose" aria-label="Close album details">&times;</button>
+      <div id="albumModalBody">
+        <!-- Content loaded dynamically -->
+      </div>
+    </div>
+  </div>
+
   <footer>
     <p>© Soul Provider</p>
   </footer>
