--- a/public/signup.html
+++ b/public/signup.html
@@ -25,7 +25,7 @@
     <a href="/"><img src="/images/spiral_logo.png" alt="Soul Provider Logo"></a>
     <div class="header-text">
       <h1>Soul Provider</h1>
-      <p class="subhead">The Best Music</p>
+      <p class="subhead">Your Best Music</p>
     </div>
   </header>
 
